# onjeon

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PROMPT.md  README.md  app.py  deploy-hf.sh  pyproject.toml  requirements.txt  run.sh  tunnel.sh
.claude/skills/verify/: SKILL.md
.streamlit/: config.toml
data/: golden_queries.json
data/fixtures/: announcement_sample.txt  persona_kim.json  register_bongcheon_officetel.json  register_daebang_villa.json  register_risky_villa.json  register_safe_officetel.json  register_sillim_villa.json
docs/: architecture.md  data-pipeline.md  deploy-hf.md  design.md  workflow.md
src/onjeon/: compare.py  config.py  display.py  ingest_models.py  llm.py  rules_io.py
src/onjeon/data_pipeline/: auction_rates.py  molit.py  regions.py
src/onjeon/l0/: rule_pipeline.py
src/onjeon/l1/: parser.py  pdf.py  schema.py
src/onjeon/l2/: model.py  synth.py
src/onjeon/l3/: eligibility.py  engine.py
src/onjeon/l4/: agent.py
src/onjeon/rag/: documents.py  embedder.py  eval.py  index.py  ingest.py  reranker.py
src/onjeon/rules/: auction_rates_2026-07.json  market_params_2026-07.json  tax_rules_2026-07.json
tests/: conftest.py  test_compare.py  test_config.py  test_data_pipeline.py  test_display.py  test_eligibility.py  test_engine.py  test_ingest_models.py  test_l0.py  test_l1_pdf.py  test_l1_robustness.py  test_l2.py  test_l2_xgb.py  test_l4.py  test_llm.py  test_parser.py  test_rag.py  test_rag_eval.py  test_rag_hybrid.py  test_regions.py  test_schema.py  test_vertical_slice.py
(+2 files in other folders)
